--- a/package.json
+++ b/package.json
@@ -10,11 +10,10 @@
   },
   "dependencies": {
     "@google/genai": "^1.38.0",
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3",
-    "lucide-react": "^0.562.0",
-    "date-fns": "^4.1.0",
-    "uuid": "^13.0.0"
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "lucide-react": "0.474.0",
+    "date-fns": "4.1.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
