--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react-dom": "^19.2.3",
     "lucide-react": "0.474.0",
     "date-fns": "4.1.0",
-    "@google/genai": "^1.38.0"
+    "@google/genai": "1.38.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
